Dump RFID tags for cache
